--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ GitHub Pages sites have a limit of 10 builds per hour, so if your page isn&rsquo
 </tr>
 <tr>
 <td>SMART Launch URI</td>
-<td><code class="prettyprint">https://&lt;github username&gt;.github.io/smart-on-fhir-scheduling-tutorial/scheduling-app/launch.html</code></td>
+<td><code class="prettyprint">https://&lt;shah2129&gt;.github.io/smart-on-fhir-scheduling-tutorial/scheduling-app/launch.html</code></td>
 <td>The page that launches your app.</td>
 </tr>
 <tr>
