--- a/scheduling-app/launch.html
+++ b/scheduling-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '[CLIENT ID]',
+        'client_id': '010c3b20-015a-4796-91f4-68b72946c37c',
         'scope': 'user/Appointment.write user/Patient.read user/Patient.write user/Slot.read launch online_access openid profile'
       });
     </script>
